// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteUtils per note config blacklist note 1`] = `
Object {
  "foo": Object {
    "body": "foo body
",
    "children": Array [],
    "created": "1",
    "custom": Object {
      "nav_order": 0,
      "permalink": "/",
    },
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": null,
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
}
`;

exports[`SiteUtils per note config nav_exclude 1`] = `
Object {
  "foo": Object {
    "body": "foo body
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {
      "nav_order": 0,
      "permalink": "/",
    },
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": null,
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
  "foo.ch1": Object {
    "body": "foo.ch1 body
",
    "children": Array [],
    "created": "1",
    "custom": Object {
      "nav_exclude": true,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
}
`;

exports[`SiteUtils per vault config blacklist vault 1`] = `
Object {
  "0d2146cb-ac79-4345-a258-1278d23f452a": Object {
    "body": "# Welcome to Dendron

This is the root of your dendron vault. If you decide to publish your entire vault, this will be your landing page. You are free to customize any part of this page except the frontmatter on top. 
",
    "children": Array [
      "foo",
    ],
    "created": 1610239820072,
    "custom": Object {
      "nav_order": 0,
      "permalink": "/",
    },
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "0d2146cb-ac79-4345-a258-1278d23f452a",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": 1610239820072,
    "vault": Object {
      "fsPath": "vault1",
    },
  },
  "foo": Object {
    "body": "foo body
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": "0d2146cb-ac79-4345-a258-1278d23f452a",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
  "foo.ch1": Object {
    "body": "foo.ch1 body
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
    "vault": Object {
      "fsPath": "vault1",
    },
  },
}
`;
